# SVT-AV1-Mod-by-Patman

./: CMakeLists.txt  README.md
Source/App/: CMakeLists.txt  app_config.c  app_config.h  app_process_cmd.c
Source/App/EncApp/: CMakeLists.txt  EbAppConfig.c  EbAppConfig.h  EbAppProcessCmd.c
Source/Lib/Codec/: ConfigureGitVersion.cmake
Source/Lib/Common/Codec/: ConfigureGitVersion.cmake
Source/Lib/Encoder/Globals/: EbEncHandle.c  EbEncSettings.c
Source/Lib/Globals/: enc_handle.c  enc_settings.c
